# EyeTrackingROS

./: .gitmodules
AccuracyCalculations/: Surfaceplot.m
CADFiles/Glasses/: BallJoint.ipt  BallJoint.stl  BallJointClamp.ipt  BallJointClamp.stl  Bauteil14.ipt  Brillenbuegel.ipt  Brillenbuegel_MIR.ipt  CameraArm.ipt  CameraArm.stl  CameraMold.ipt  CameraMold.stl  CameraMoldLogi.ipt  CameraMoldLogi.stl  CemaraArmInterface.ipt  CemaraArmInterface.stl  CemaraArmInterface_MIR.ipt  EyeTracking.ipj  GlassesAssembly.iam  GlassesInterface.stl  Slider.ipt  Slider.stl
CADFiles/Glasses/OldVersions/: BallJoint.0001.ipt  Brillenbuegel.0001.ipt  CameraArm.0001.ipt  CameraMold.0001.ipt  CameraMoldLogi.0003.ipt  CemaraArmInterface.0001.ipt  CemaraArmInterface.0002.ipt  GlassesAssembly.0005.iam
Experiments/15_5_Beschleunigungssensor/: TestNoDelay.txt  ValidationData30each.CSV  ValidationData30each.txt
Experiments/15_5_Beschleunigungssensor/Langsam_Nicken/: SP_01.txt  SP_02.txt  SP_03.txt
Experiments/15_5_Beschleunigungssensor/Langsam_Wanken/: SR_01.txt  SR_02.txt  SR_03.txt
Experiments/PythonAuswertung/: ArduinoToPyQT.py  HeadData2.txt  HeadDataIntegral.txt
MatlabFiles/: AccDataProcessing.m  EventDetector.m  EyeTrackingDataAnalysis.m  EyeTrackingDataAnalysisLine.m  ZDirectionProcessing.m
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/install/: .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/arm_kinematics/: CMakeLists.txt
catkin_ws/src/simulation/: CMakeLists.txt  package.xml
catkin_ws/src/simulation/urdf/: arm.urdf
(+69 files in other folders)
