<package>
  <name>simulation</name>
  <version>0.0.1</version>

  <description>Visualisation of arm kinematics</description>
<author email="f.knudsen@tuhh.de">Fynn Knudsen</author>

  <maintainer email="f.knudsen@tuhh.de">Fynn Knudsen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
